syntax = "proto3";
package messages;
option csharp_namespace = "Messages";

message AddCommand {
	double value = 1;
}

message SubtractCommand {
	double value = 1;
}

message DivideCommand {
	double value = 1;
}

message MultiplyCommand {
	double value = 1;
}

message PrintResultCommand {}

message ClearCommand {}

message ResetEvent {}

message AddedEvent {
	double value = 1;
}

message SubtractedEvent {
	double value = 1;
}

message DividedEvent {
	double value = 1;
}

message MultipliedEvent {
	double value = 1;
}